--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,6 +26,10 @@ RUN pip wheel \
 
 FROM python:3.12-slim
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libmagic1 \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 COPY --from=builder /wheels /wheels
